[tool.poetry]
name = "entity-resolution-with-monetdb"
version = "0.1.0"
description = "A proof-of-concept entity resolution approach, with Tensorflow, inside a MonetDB."
authors = ["Ilias Antonopoulos <ilias.antonopoulos@yahoo.gr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"

tensorflow = "^2.4.1"
notebook = "^6.2.0"
pandas = "^1.2.2"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
