[tool.poetry]
name = "entity-resolution-with-monetdb"
version = "0.2.0"
description = "A proof-of-concept entity resolution approach, with Tensorflow, inside a MonetDB."
authors = ["Ilias Antonopoulos <ilias.antonopoulos@yahoo.gr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"

more-itertools = "^8.7.0"
notebook = "^6.2.0"
pandas = "^1.2.2"
plotnine = "^0.7.1"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
